<resources>
    <string name="app_name">Dating</string>
    <string name="facebook_app_id">437725400015055</string>

    <string name="hint_email">Email</string>
    <string name="hint_pass">Password</string>
    <string name="text_login">Access</string>
    <string name="text_create_accout">Create Account</string>
    <string name="text_login_Facebook">Facebook Log-In</string>
    <string name="text_not_account"> Do not have an account? </string>
    <string name="text_a_member"> Are you already a member? </string>
    <string name="text_sign_up"><u>Sign-Up</u></string>
    <string name="text_sign_in"><u>Sign-In</u></string>
    <string name="text_forgot_password">Forgot Password? </string>
    <string name="text_recover"><u>Recover it</u></string>
    <string name="text_cancel">Cancel</string>
    <string name="text_friend">Friend</string>
    <string name="text_average">Average</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_api">AIzaSyAQei2BFvV_5rZd91FYUAdirO2vuxcDcd8</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_chat">Chat</string>

    <string name="textview.text.profile_title">Your Profile</string>
    <string name="textview.text.profile_friend">Friend</string>
    <string name="textview.text.profile_average">AVERAGE</string>
    <string name="textview.hint.profile_name">Your Name</string>
    <string name="textview.hint.profile_age">Age</string>
    <string name="textview.hint.profile_addr">Address</string>
    <string name="textview.hint.profile_region">Region</string>
    <string name="textview.hint.profile_about">This is describle of you. It can be hobby, your favorite, activity you like such as sporty, playing game, reading book, talking with friends,...!!!</string>
    <string name="textview.hint.profile_numfriends">0</string>

    <string name="button.text.profile_discovery_setting">Discovery Settings</string>
    <string name="button.text.profile_change_password">Change Password</string>
    <string name="button.text.profile_notifications_setting">Notifications Setting</string>

    <!-- Edit Profile -->
    <string name="textview.text.edit_profile_title">Edit Profile</string>
    <string name="textview.text.edit_profile_name">NAME*</string>
    <string name="textview.hint.edit_profile_name">Your name</string>
    <string name="textview.text.edit_profile_age">AGE*</string>
    <string name="textview.hint.edit_profile_age">23</string>
    <string name="textview.text.edit_profile_sex">SEX*</string>
    <string name="textview.text.edit_profile_sex_male">Male</string>
    <string name="textview.text.edit_profile_sex_female">Female</string>
    <string name="textview.text.edit_profile_country">COUNTRY*</string>
    <string name="textview.text.edit_profile_address">ADDRESS*</string>
    <string name="textview.hint.edit_profile_address">Your Address</string>
    <string name="textview.text.edit_profile_about">ABOUT*</string>
    <string name="textview.text.edit_profile_photo">PHOTO</string>
    <string name="textview.hint.edit_profile_about">Write something about you</string>
    <string name="title_activity_settings">Discovery Settings</string>
    <string name="vietnam">Việt Nam</string>
    <string name="endland">England</string>
    <string name="laos">Laos</string>
    <string name="thailand">Thailand</string>
    <string name="china">China</string>
    <string name="america">America</string>
    <string name="france">France</string>

    <!-- Strings related to Settings -->
    <string name="textview.text.setting_title">Discovery Settings</string>
    <string name="textview.text.setting_privacy">Privacy</string>
    <string name="switch.text.setting_privacy_item">Visibility</string>
    <string name="textview.text.setting_privacy_description">Disabling visibility you will never be visible
    on the map. You will only be showed in the section "Around you"</string>
    <string name="textview.text.setting_Looking_for">Looking for</string>
    <string name="textview.text.setting_distance">Distance</string>
    <string name="textview.text.setting_age_range">Age Range</string>
    <string name="textview.text.setting_age_from">From</string>
    <string name="textview.text.setting_age_to">To</string>
    <!--change password-->
    <string name="textview.text.change_password_title">Change your password</string>
    <string name="textview.text.old_password">Old Password</string>
    <string name="textview.text.new_password">New Password</string>
    <string name="textview.text.confirm_new_password">Confirm New Password</string>
    <string name="toggle.texton">Show</string>
    <string name="toggle.textoff">Hide</string>
    <string name="button.text.update_password">Update Password</string>

    <!-- notification setting -->
    <string name="textview.text.notification_title">Notifications Setting</string>
    <string name="textview.text.notification_general">General</string>
    <string name="switch.text.notification_general_ring">Ring</string>
    <string name="switch.text.notification_general_vibrate">Vibrate</string>
    <string name="textview.text.notification_message">Message</string>
    <string name="switch.text.notification_message_new">Notify  when have new message</string>
    <string name="switch.text.notification_message_new_friend">Notify when a new friend connect to you</string>
    <string name="switch.text.notification_read_at_lock_screen">Allow read message at lock screen</string>
	
	<!-- activity chat -->
	<string name="textview.text.chat_name">Your friend</string>
	<string name="textview.text.chat_sending_image">Sending image</string>
	
	<!-- activity detail -->
	<string name="textview.text.detail_title">Detail</string>
	<string name="textview.text.detail_name">Name</string>
	<string name="textview.text.detail_sex">Sex</string>
	<string name="textview.text.detail_address">Address</string>
	<string name="textview.text.detail_about">About me: </string>
	<string name="textview.text.detail_description">Description </string>
	<string name="textview.text.detail_friend">Friend</string>
	
	<!-- cell friend chat  -->
	<string name="textview.text.cell_friend_chat_name">Name</string>
	<string name="textview.text.cell_friend_chat_lastmessage">Hi girl!</string>
	<!-- cell my message -->
	<string name="textview.text.cell_my_message">Chat message here</string>
	
    <!-- replace ^^^ = & before use -->
    <string name="default_avatar">https://firebasestorage.googleapis.com/v0/b/dating-8e616.appspot.com/o/avatar%2F112906retath5h9lxn0roi.jpg?alt=media^^^token=2389ec92-4979-48d8-966b-0b7391bbd05c</string>

</resources>
