<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.vankien.dating.views.activity.ResetPasswordActivity">

    <ImageView
        android:id="@+id/imgv_logo"
        android:layout_width="@dimen/logo_w_h"
        android:layout_height="@dimen/logo_w_h"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/edt_margin_bottom"
        android:layout_marginTop="?attr/actionBarSize"
        android:adjustViewBounds="false"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/txtNotice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_forgot_password"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/imgv_logo"
        android:layout_centerInParent="true"
        android:padding="@dimen/text_padding"
        />

    <TextView
        android:id="@+id/txtNotice2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_msg"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/white"
        android:layout_below="@+id/txtNotice"
        android:layout_centerInParent="true"
        android:padding="@dimen/text_padding"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_below="@id/txtNotice2"/>

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_reset_password"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:background="@color/colorAccent"
        android:layout_below="@+id/email"
        android:layout_marginLeft="@dimen/edt_margin_left"
        android:layout_marginRight="@dimen/edt_margin_right"
        android:layout_marginTop="@dimen/edt_margin_top"
        android:textSize="@dimen/text_size_large"
        />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/btn_back"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/btn_reset_password"
        android:layout_centerInParent="true"/>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        android:layout_width="@dimen/logo_w_h"
        android:layout_height="@dimen/logo_w_h"
        style="@style/AVLoadingIndicatorView"
        android:visibility="invisible"
        app:indicatorName="PacmanIndicator"
        app:indicatorColor="@color/yellow"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>