<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dialog_dang_ki"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.vankien.dating.Views.Activity.LogInActivity"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/imgv_logo2"
        android:layout_width="80dp"
        android:layout_height="93dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/logo"
        android:scaleType="fitCenter" />

    <EditText
        android:id="@+id/edt_email_sign_up"
        android:layout_below="@id/imgv_logo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edt_margin_left"
        android:layout_marginRight="@dimen/edt_margin_right"
        android:layout_marginTop="@dimen/edt_margin_top"
        android:layout_marginBottom="@dimen/edt_margin_bottom"
        android:padding="@dimen/text_padding"
        android:textColor="@color/black"
        android:hint="@string/hint_email"
        android:textAlignment="center"
        android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edt_password_sign_up"
            android:layout_below="@id/edt_email_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edt_margin_left"
            android:layout_marginRight="@dimen/edt_margin_right"
            android:layout_marginBottom="@dimen/edt_margin_bottom"
            android:padding="@dimen/text_padding"
            android:textColor="@color/black"
            android:hint="@string/hint_pass"
            android:textAlignment="center"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_sign_up2"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/height_button"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="@dimen/edt_margin_top"
            android:layout_marginRight="@dimen/edt_margin_right"
            android:layout_marginBottom="@dimen/edt_margin_bottom"
            android:layout_below="@id/edt_password_sign_up"
            android:background="@drawable/shape_button_login"
            android:text="@string/text_sign_up2"
            android:textAllCaps="false"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_size_large"
            />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/height_button"
            android:layout_marginRight="@dimen/edt_margin_right"
            android:layout_marginTop="@dimen/edt_margin_top"
            android:layout_marginBottom="@dimen/edt_margin_bottom"
            android:layout_toRightOf="@id/btn_sign_up2"
            android:layout_below="@id/edt_password_sign_up"
            android:background="@drawable/shape_button_login"
            android:text="@string/text_cancel"
            android:textAllCaps="false"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_size_large"
            />
</RelativeLayout>